# lightswitch

./: AppIcon.icns  Cargo.toml  build.rs  readme.me
deploy/: AppIcon.icns  Info.plist  launch.sh  pack.macos.sh
libs/rdev/src/: lib.rs
libs/rdev/src/macos/: listen.rs  listen_main.rs  mod.rs
src/: app_window.rs  content_view.rs  global_keyboard_hook.rs  keypress_listener.rs  keypress_watcher.rs  lang_switch_monitor.rs  main.rs  switch_lang.rs
