[package]
name = "lightswitch"
description = "Remap Fn key to switch to the layout with number of pressing"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
readkey = "0.2.1"
cacao = "0.2.1"

[package.metadata.bundle]
name = "Lightswitch"
identifier = "com.sergii-tokariev.lightswitch"
icon = ["AppIcon.icns"]
version = "1.0.0"
category = "Utility"
