[package]
name = "lightswitch"
description = "Remap Fn key to switch to the layout with number of pressing"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cacao="0.2.1"
rdev = { path = "./libs/rdev" }

[package.metadata.bundle]
name = "Lightswitch"
identifier = "com.sergii-tokariev.lightswitch"
icon = ["AppIcon.icns"]
version = "1.0.0"
category = "Utility"
osx_minimum_system_version="10.11"